# dagster-delta

./: CONTRIBUTING.MD  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: template-quality-check.yml
libraries/dagster-delta/: pyproject.toml
libraries/dagster-delta/dagster_delta/: test.ipynb
libraries/dagster-delta/dagster_delta/_db_io_manager/: custom_db_io_manager.py  utils.py
libraries/dagster-delta/dagster_delta/_handler/: base.py
libraries/dagster-delta/dagster_delta/_handler/utils/: date_format.py  dnf.py  predicates.py
libraries/dagster-delta/dagster_delta/io_manager/: base.py  polars.py
libraries/dagster-delta/dagster_delta_tests/: test_create_predicate.py  test_io_manager.py
libraries/dagster-unity-catalog-polars/: pyproject.toml
libraries/dagster-unity-catalog-polars/dagster_unity_catalog_polars/: unity_catalog_iomanager.py
