[project]
name = "dagster-delta-repo"
version = "0.5.6"
description = "Dagster deltalake implementation for Polars and PyArrow with read, write and MERGE support"
requires-python = ">=3.9"
authors = [
    { name = "Gian Violi", email = "96206151+gfvioli@users.noreply.github.com" },
    { name = "Ion Koutsouris", email = "15728914+ion-elgreco@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["dagster", "polars", "io manager", "databricks", "unity catalog"]
dependencies = ["dagster-delta", "dagster-unity-catalog-polars"]

[tool.uv.workspace]
members = ["libraries/*"]

[tool.uv.sources]
dagster-delta = { workspace = true }
dagster-unity-catalog-polars = { workspace = true }
